
Revision history for XML::NamespaceSupport:

1.10  2009-06-12
    - Release real version since CPAN testers gave us a pass (perigrin)

1.09_90 2009-05-28
    - Re-bundle with modern testing and Module::Install (perigrin)

1.09  fri 20050513 00:50
    - add support (on by default) for the Namespaces in XML 1.1 spec.

1.08  thu 20020822 14:01
    - "fix" it to follow the latest XML NS Errata barfing around

1.07  mon 20020527 14:41
    - added undeclare_prefix() thanks to Christian Glahn.

1.06  tue 20020514 17:36
    - CPAN problem, had to change the version

1.05  fri 20020404 14:00
    - added a number of rather good speedups by converting a lot of
    the code to use arrays instead of hashes. More of the same kind
    of tuning is expected for the next version.
    - fixed another bug, again thanks to Grant McLean, due to which
    declarePrefix() was not functionning according to the spec (it
    failed to set a random prefix when the prefix was undef).

1.04  fri 20020125 18:34:39
    - fixed a very nasty bug reported by Grant McLean. getPrefix() had
    an immediate return() inside of a while() that iterated over the
    declared prefixes using each(). Because of that, calling
    getPrefix() twice in a row would return nothing the next time
    because the each() internal iterator wasn't reset. Sometimes Perl
    bites.

1.03  wed 20020123 19:04:19
    - a few warnings were confusing people when they wrongly used undef
    prefixes. The warning has now been made explicit (as it reveals a
    problem in the calling code).
    - turned the namespace constants into variables so that it is easier
    to use them from outside.

1.02  thu 20011129 19:04:38
	- misc fixes in the docs
	- removed the uri_unknown_prefix option as it wasn't what Matt
	thought it patched (it did seem strange, but then I've seen
	stranger feature requests ;-)
	- added the automatic generation of prefixes when they are set
	to undef. Be warned that it's a potentially dangerous behaviour